--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 nav {
-  background-color: #f9c411;
+  background-color: #33658A;
   padding: 1rem 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 nav h2 {
@@ -16,13 +17,17 @@ nav a {
   color: white;
   text-decoration: none;
 }
+
 nav a:hover {
-  background-color: #33658A;
   height: 100%;
+  text-decoration: none;
+  color: yellow;
+  transition: .3s;
 }
-nav a:visited {
-  color: #33658A;
-}
+
+/* nav a:visited {
+  color: yellow;
+} */
 
 header h1 {
   font-size: 7vw;
@@ -30,6 +35,7 @@ header h1 {
   color: white;
   padding: 12% 0 3%;
   text-shadow: 5px 5px 30px black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header p {
@@ -37,6 +43,7 @@ header p {
   text-align: center;
   color: white;
   text-shadow: 5px 5px 30px black;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
 h3 {
@@ -49,6 +56,8 @@ h3 {
   padding: 2vw;
   margin: 2vw;
   font-size: 3vw;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  box-shadow: 2px 2px 20px black;
 }
 
 form {
@@ -62,7 +71,7 @@ label {
 
 input {
   margin: 1vw 0;
-  width: 98%;
+  width: 100%;
   padding: .75vw;
   font-size: 1.25vw;
 }
